<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_item"
        android:title="@string/add"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/remove_itme"
        android:title="@string/remove"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/more_item"
        android:title="@string/more"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/item1"
                android:title="@string/item1" />
            <item
                android:id="@+id/item2"
                android:title="@string/item1" />
        </menu>
    </item>
</menu>